--- a/apps/bgd/bgd-route.yaml
+++ b/apps/bgd/bgd-route.yaml
@@ -12,5 +12,5 @@ spec:
     name: bgd
     weight: 100
   tls:
-    termination: reencrypt
+    termination: edge
     insecureEdgeTerminationPolicy: Redirect
