--- a/ansible/roles/argocd/files/bgd-app.yaml
+++ b/ansible/roles/argocd/files/bgd-app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: bgd-app
 spec:
   destination:
-    namespace: example-1
+    namespace: example
     server: https://kubernetes.default.svc
   project: default
   source:
