--- a/ansible/roles/argocd/files/bgd-app-helm.yaml
+++ b/ansible/roles/argocd/files/bgd-app-helm.yaml
@@ -14,7 +14,7 @@ spec:
       valueFiles:
         - custom_values_1/values.yaml
   sources: []
-  project: default
+  project: demo-project
   syncPolicy:
     automated:
       prune: true
